--- a/app/views/requistions/_versions.html.erb
+++ b/app/views/requistions/_versions.html.erb
@@ -1,15 +1,6 @@
 <div class ="form-group">
-	<label class=" col-md-3">Описание договора</label>
+	<label class=" col-md-3">Номер контракта</label>
 	<div class="col-md-5">
-        <%# if not @requistion.contract.nil?%>
-		    <%#= select_tag "version_id", options_from_collection_for_select(@list_company, "id", "description", @requistion.contract_id), :prompt => "Выберите из списка", :class => "selectize", required: "" %>
-		<%# else %>
-		    <%= select_tag "version_id", options_from_collection_for_select(@list_company, "id", "description"), :prompt => "Выберите из списка", :class => "selectize", required: "" %>
-		<%# end %>
-		<script>
-		$('#version_id').selectize({
-
-		});
-		</script>
+    <%= select_tag "version_id", options_from_collection_for_select(@list_contract, "id", "id"), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
 	</div>
 </div>
