fix_type_worker

--- a/app/views/users/admin_new.html.erb
+++ b/app/views/users/admin_new.html.erb
@@ -48,9 +48,9 @@
 		<div class="form-group">
 			<label>Тип пользователя</label><br>
 
-				<input type="radio" name="status" value="admin" required  />Диспетчер<br />
-				<input type="radio" name="status" value="client" required />Клиент<br />
-				<input type="radio" name="status" value="worker" required />Исполнитель<br />
+				<input type="radio" name="user[status]" value="admin" required  />Диспетчер<br />
+				<input type="radio" name="user[status]" value="client" required />Клиент<br />
+				<input type="radio" name="user[status]" value="worker" required />Исполнитель<br />
 			</div>
 
 		<br>
