--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -100,6 +100,7 @@
   <h4>Для вас на объект заявок нет</h4>
 <% end %>
 
+<%= link_to 'Редактировать', edit_building_path(@building), class: "btn" %>
 <%= link_to 'Все заявки', requistions_path, class: "btn" %>
 <a href="javascript:history.back()" class="btn" onMouseOver="window.status='Назад';return true">Назад</a>
 </div>
