--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
 		<div class="btn-group-vertical" role="group">
 			<%= link_to "Изменить данные профиля", edit_user_path(@user), class: "btn" %>
 			<button class="btn" data-toggle="modal" data-target="#myModal" >Изменть пароль</button>
-			<% if current_user.admin? %>
+			<% if current_user.worker? %>
 			<%= link_to "Назначить начальника", "/users/#{@user.id}/choose_manager", class: "btn" %>
 			<% end %>
 		</div>
