--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,6 +24,12 @@
 				<label>Специализация</label>
 				<%= f.text_field :specialization , class: "form-control" %>
 			</div>
+
+			<div class="form-group">
+				<label>Начальник участка</label>
+				<%= options_from_collection_for_select(Bosses.all, :id, :name) %>
+			</div>
+
 		<% end %>
 		<div class="form-group">
 			<label>Почта</label>
