--- a/app/views/requistions/_table_contract.html.erb
+++ b/app/views/requistions/_table_contract.html.erb
@@ -1,6 +1,6 @@
+<label>Контракты</label>
 <div class="form-group">
-	<label class=" col-xs-3">Контракты</label>
-	<div class="col-xs-5">
+	<div class="col-xs-12">
 		<table id="contracts_for_new" class="table table-wrapper table-bordered contractSmall">
 			<thead>
 				<tr class = "">
