--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -69,7 +69,7 @@
 			<label class=" col-xs-3">Тип работ</label>
 			<div class="col-xs-8">
 				<%= f.select :type_requistion, [['Электроснабжение	', 'Э'],
-											['Слаботочка', 'C'],
+											['Слаботочка', 'С'],
 											['Бассеины', 'Б'],
 											['Вентиляция и воздушное отопление', 'О'],
 											['Пожаротушение', 'П'],
